fixed validation logic of the add camera formulary input

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -31,7 +31,7 @@
       "missing_integration": "Select an integration type",
       "camera_name": "Camera name is required",
       "duplicated_camera_name": "There is already a camera with that name",
-      "static_stream_url_missing": "Indicate a static or a stream URL"
+      "static_stream_url_missing": "No static or stream URL"
     }
   }
 }
