--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -5,7 +5,8 @@
     "delete": "Delete",
     "back": "Back",
     "confirm": "confirm",
-    "add_camera": "Add camera",
+    "add_camera": "Add Camera",
+    "edit_camera": "Edit Camera",
     "delete_camera": "Delete Camera",
     "custom_camera": "Custom Camera",
     "go_back": "Back"
@@ -29,9 +30,9 @@
     "ip": "IP",
     "number_of_cameras": "Number of cameras",
     "advanced_options":"Advanced Options",
-    "select_authetication": "Select Authetication",
+    "authentication": "Select Authetication",
     "verify_ssl": "Verify SSL",
-    "select_rtsp_transport": "Select RTSP Transport",
+    "rtsp_transport": "Select RTSP Transport",
     "framerate": "Framerate",
     "issues": {
       "missing_integration": "Select an integration type",
