--- a/TODO
+++ b/TODO
@@ -44,7 +44,8 @@ In the advanced options toogle I can implement it in another (check enery dashbo
 
 - Integration type -> Use SVG icon in before the selector
 - Icons in record Video of camera and more options are not appearing
-- In the autocomplete camera form (when picking one camera model, add information about the default 'door' i.e what comes after ":" . Also, if the IP has a 'door' ignore this parameter.
+- In the autocomplete camera form (when picking one camera model, add information about the default 'door' i.e what comes after ":" . Also, if the IP has a 'door' ignore this parameter. (where do I find information about this?)
+- In the autocomplete camera form, can I used "stream" and "static" and dictionary keys? FFPMPEG and JPEG would give more information and might help pick the integration
 
 ## In the edit camera info dialog:
 
