Implemented the autocomplete dialogs in the backend using jinja. Moved the database to the backend

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -34,6 +34,9 @@
     "verify_ssl": "Verify SSL",
     "rtsp_transport": "Select RTSP Transport",
     "framerate": "Framerate",
+    "channel": "Channel",
+    "still_url_door": "Still Image Door",
+    "stream_source_door": "Stream Door",
     "issues": {
       "missing_integration": "Select an integration type",
       "name": "Camera name is required",
