Implemented formulary changes in frontend

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -37,6 +37,7 @@
     "channel": "Channel",
     "still_url_door": "Still Image Door",
     "stream_source_door": "Stream Door",
+    "add_multi_channels": "Add all channels?",
     "issues": {
       "missing_integration": "Select an integration type",
       "name": "Camera name is required",
